--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -12,6 +12,7 @@
            <%= link_to post_image_path(post_image.id) do %>
             <%= attachment_image_tag post_image, :image %>
                 <% end %>
+                <%= paginate @post_images %>
                     <%= attachment_image_tag post_image, :image %>
                   </div>
                 </div>
@@ -25,10 +26,10 @@
                   <p><%= post_image.caption %></p>
                   <ul class="inline-meta">
                   <li>By
-                    <a href="#">投稿者名</a>
+                    <%= post_image.user.name %>
                   </li>
                   <li>
-                    <a href="#">23 コメント</a>
+                    <%= link_to "#{post_image.post_comments.count}　コメント", post_image_path(post_image.id) %>
                   </li>
                 </ul>
               </div>
